test/zinc_source/compile_errors/metadata/05_implements_wrong_arity.zn
// expected-error: implements\(\) expects exactly two arguments

struct A {
}

fn main() {
    print(implements(A))
}
